# OnlineConference-server

./: .clang-format  CMakeLists.txt  design.md  main.cpp
.cache/clangd/index/: buffer.cpp.FD98DDD4297C3BEC.idx  http.cpp.E76C14B7C2CFA75D.idx  net.cpp.ACC993098272FB91.idx  net.h.74081C1EED1FE580.idx  rtp.cpp.A4813BA17AFABAFD.idx  test.cpp.93ABF0D2ADD4FE2D.idx  test.pb.cc.E2D8AE396DE1CB1D.idx  test.pb.h.D1F5496680A933EC.idx
doc/: .$项目结构.drawio.dtmp  design.md  项目结构.drawio
src/: CMakeLists.txt  ConferenceManager.cpp  ConferenceManager.h  GlobalResourceManager.h  buffer.cpp  http.cpp  net.cpp  net.h  rtp.cpp
src/ConferenceManager/: ConferenceManager.cpp  ConferenceManager.h
src/GlobalResourceManager/: GlobalResourceManager.cpp  GlobalResourceManager.h  udp.cpp  udp.h
src/buffer/: buffer.cpp  buffer.h
src/epoll/: epoll.cpp  epoll.h
src/http/: ConnectHttp.cpp  ConnectHttp.h  HttpConn.cpp  HttpConn.h  HttpRequest.cpp  HttpRequest.h  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.h  TypeDef.h
src/protobuf/: control_info.pb.cc  control_info.pb.h  control_info.proto  message.pb.cc  message.pb.h  message.proto  message_info.pb.cc  message_info.pb.h  message_info.proto  return_info_member.pb.cc  return_info_member.pb.h  return_info_member.proto  return_info_room.pb.cc  return_info_room.pb.h  return_info_room.proto
src/server/: server.cpp  server.h
src/template/: template.hpp
src/timer/: timer.hpp
src/udp/: udp.cpp  udp.h
test/: CMakeLists.txt  test.cpp
test/protobufTest/: test.pb.cc  test.pb.h  test.proto
(+8 files in other folders)
